examples/sample-signals/k8s/Service__v1_mpizarro-dev_prometheus-prometheus-pushgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus
    meta.helm.sh/release-namespace: mpizarro-dev
    prometheus.io/probe: pushgateway
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: app-flask
    app.kubernetes.io/name: prometheus-pushgateway
    app.kubernetes.io/version: v1.7.0
    helm.sh/chart: prometheus-pushgateway-2.8.0
  name: prometheus-prometheus-pushgateway
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus-pushgateway
  sessionAffinity: None
  type: ClusterIP
